[package]
name = "ne4_konfig"
version = "1.0.2"
authors = ["Stefan Müller <zzeroo> <co@zzeroo.com>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://gitlab.com/RA-GAS-GmbH/ne4_konfig"
description = "GUI für die Konfiguration der 'NE4-MOD-BUS' Sensoren"
edition = "2018"

[features]
default = []
# Internal version with more functions
ra-gas = []

[badges]
appveyor = { repository = "zzeroo/ne4-konfig", service = "gitlab" }
gitlab = { repository = "RA-GAS-GmbH/ne4_konfig" }
maintenance = { status = "actively-developed" }

[dependencies]
chrono = "0.4.11"
csv = "1"
futures = "0.3.5"
gdk = "0.12.1"
glib = "0.9.3"
log = "0.4.8"
mio-serial = "3.3.1"
nom = "5.1.2" #TODO: replace with csv/serde
pretty_env_logger = "0.4.0"
serde = { version = "1", features = ["derive"] }
tokio-modbus = "0.4.0"
# I need port enumeration, so I've patched tokio-serial.
tokio-serial = { git = "https://github.com/zzeroo/tokio-serial.git", branch = "feature/port_enumeration" }

[dependencies.gtk]
version = "0.8.1"
features = ["v3_20", "embed-lgpl-docs"]

[dependencies.gio]
version = "0.8.1"
features = ["v2_44"]

[dependencies.tokio]
version = "0.2.20"
features = ["full"]
